intear-dex-management/tests/snapshots/views__xyk_quote_asset_not_in_pool.snap
---
source: intear-dex-management/tests/views.rs
expression: "cli.view(&[\"xyk\", \"quote\", \"0\", \"sell\", \"1 INTEL\"])"
---
$ near-intear-dex-management xyk quote 0 sell '1 INTEL' network-config sandbox now
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk quote 0 sell '1 INTEL' network-config sandbox now

Error:
   0: INTEL isn't one of: NEAR (near), USDt (nep141:usdt.tether-token.near)
